k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spring-petclinic-ireland
  labels:
    project: spring-petclinic
    team: dmi-internship
